# sn_gossip

./: .gitignore  CHANGELOG.md  CONTRIBUTOR  Cargo.toml  README.md  codeowners
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: master.yml  pr.yml
examples/: network.rs
src/: error.rs  gossip.rs  gossiper.rs  id.rs  lib.rs  message_state.rs  messages.rs  node.rs  rumor_state.rs
src/gossip_basic/: gossip.rs  gossiper.rs  messages.rs
src/gossip_median/: gossip.rs  gossiper.rs  messages.rs  mod.rs
src/gossip_median_with_round/: gossip.rs  gossiper.rs  messages.rs
