[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "An implementation of a push-pull gossip protocol."
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_gossip"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_gossip"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "0.4.11"
ed25519-dalek = "0.9.1"
futures = "0.1.25"
log = "0.4.8"
quick-error = "1.2.3"
rand = "0.6.4"
serde = "1.0.104"
serde_derive = "1.0.104"
sha3 = "0.8.2"
unwrap = "1.2.1"
bincode = "1.2.1"

[dev-dependencies]
futures-cpupool = "0.1.8"
itertools = "0.8.2"
tokio = "0.1.1"
tokio-io = "0.1.5"

[features]
default = ["ed25519-dalek/serde"]
